syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example";
option java_outer_classname = "OrderServiceProto";

// order definition
message Order {
  int32 order_id = 1;
  int32 product_id = 2;
  string product_name = 3;
  int32 product_quantity = 4;
  string customer_name = 5;
  int32 total_price = 6;
  string order_status = 7; // pending
}


// Service definition
service OrderService {
  // client-side streaming RPC: Client sends a series of orders
  rpc StreamOrders(stream Order) returns (OrderConfirmation);
}


// Confirm that the order transfer is successful
message OrderConfirmation {
  string message = 1;  //
}

